--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-social-media",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://aly0na27.github.io/my-social-media/public/",
+  "homepage": "https://aly0na27.github.io/my-social-media/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
