--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     ]
   },
   "devDependencies": {
+    "@types/css-modules": "^1.0.4",
     "gh-pages": "^6.0.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "typescript-plugin-css-modules": "^5.0.2"
   }
 }
