--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,11 @@
   "compilerOptions": {
     "module": "commonjs",
     "sourceMap": true,
-    "jsx": "react"
+    "jsx": "react",
+    "skipLibCheck": true
   },
   "exclude": [
     "node_modules"
-  ]
+  ],
+  "include": ["src/**/*"]
 }
