--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^18.2.33",
     "@types/redux-form": "^8.3.8",
     "antd": "^5.10.2",
     "axios": "^1.5.1",
