--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/antd": "^1.0.0",
     "@types/react": "^18.2.33",
     "@types/redux-form": "^8.3.8",
     "antd": "^5.10.2",
     "axios": "^1.5.1",
     "classnames": "^2.3.2",
+    "formik": "^2.4.5",
+    "formik-antd": "^2.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
