useDispatch useSelector for UsersPage, MaterialUI/Skeleton for UsersPage

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "homepage": "https://aly0na27.github.io/my-social-media/",
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.18",
     "@react-buddy/ide-toolbox": "^2.4.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
